--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
 body{
     background-color: rgb(239, 238, 238);
+    display: flex;
+    flex-wrap: wrap;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .ui-box-1{
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     position: relative;
     width: 380px;
     height: auto;
@@ -166,8 +169,55 @@ body{
 }
 
 .ui-box-2{
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    position: relative;
     background-color: rgb(30, 30, 30);
+    width: 380px;
+    margin-top: 5%;
+    margin-right: 0;
+    margin-left: 4%;
+    border-radius: 30px;
+    background-image: linear-gradient(to top, #171616, #3A3A3A);
 }
+
+.ui-box-2 header{
+    display: flex;
+}
+
+.second-ui-title{
+    color: white;
+    font-weight: 400;
+    margin-left: 5%;
+}
+
+.stats-button{
+    justify-content: center;
+    color: white;
+    display: flex;
+    border: 1px solid gray;
+    background-color: #454546;
+    border-radius: 10px;
+    height: 40px;
+    width: 100px;
+    align-items: center;
+    margin-top: 4%;
+    margin-right: 5%;
+    margin-left: 50%;
+}
+    
+.stats-button p{
+    margin: 0;
+    font-size: 80%;
+    font-weight: 600;
+    font-size: 90%;
+}
+
+.arrow-down{
+    width: 15%;
+    margin-left: 10%;
+}
+
+
 
 .ui-box-3{
     background: linear-gradient(to bottom, #f9f8f9, #E4BBE2)
