Termine el segundo cuadro de la pagina e agregue algunas clases en el archivo HTML

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,13 @@
+:root{
+    --colors-height: 48px;
+    --colors-width: 9px;
+    --colors-radius: 20px;
+}
+
 body{
     background-color: rgb(239, 238, 238);
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -9,11 +16,10 @@ body{
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     position: relative;
     width: 380px;
-    height: auto;
+    height: 420px;
     border-radius: 30px;
     border: 1px solid transparent;
     background: linear-gradient(#fefefe, #fefefe) padding-box, linear-gradient(to top, #9C9C9C, #E2E2E2) border-box;
-    margin-left: 20%;
     margin-top: 5%;
 }
 
@@ -174,7 +180,6 @@ body{
     background-color: rgb(30, 30, 30);
     width: 380px;
     margin-top: 5%;
-    margin-right: 0;
     margin-left: 4%;
     border-radius: 30px;
     background-image: linear-gradient(to top, #171616, #3A3A3A);
@@ -217,7 +222,377 @@ body{
     margin-left: 10%;
 }
 
+.earnings-section{
+    margin: 0 5%;
+}
 
+.earnings-title{
+    color: white;
+    font-weight: 300;
+    margin: 1%;
+}
+
+.amount-earn{
+    color: white;
+    font-size: 350%;
+    font-weight: 500;
+    margin: 0;
+}
+
+.amount-earn span{
+    color: #707070;
+}
+
+.month-earned{
+    color: white;
+    margin-top: 2%;
+    font-size: 100%;
+}
+
+.month-earned span{
+    color: #1EEB3E;
+}
+
+.data-section{
+    display: flex;
+    margin: 0 5%;
+    flex-wrap: wrap;
+}
+
+.projects-clients{
+    background-color: #3E3E3E;
+    margin-right: 5%;
+    width: 45%;
+    border-radius: 10px;
+}
+
+.fisrt-text{
+    color: grey;
+    text-align: left;
+    margin: 3% 0 3% 9%;
+    
+}
+
+.second-text{
+    color: grey;
+    text-align: left;
+    margin: 0 0 3% 9%;
+    font-size: 70%;
+}
+
+.first-number{
+    color: white;
+    font-size: 200%;
+}
+
+.second-number{
+    color: white;
+}
+
+.freelance-place{
+    margin: 5% 0;
+    background-color: #F0F0F0;
+    border-radius: 10px;
+    width: 100%;
+}
+
+.freelance-place p:first-child{
+    font-size: 300%;
+    color: black;
+    font-weight: 500;
+    margin: 3% 0 0 3%; 
+}
+
+.freelance-place p{
+    color: grey;
+    margin: 2% 0 5% 3%;
+}
+
+.freelance-place img{
+    width: 20%;
+    position: absolute;
+    top: 55%;
+    left: 70%;
+}
+
+.colors-section{
+    margin: 0 5%;
+}
+
+.colors-section p:first-child{
+    color: white;
+}
+
+.colors-container{
+    display: flex;
+}
+
+.color-gradient-1{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #0d7fff;
+}
+.color-gradient-2{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #0c7ffe;
+}
+
+.color-gradient-3{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #0c7efe;
+}
+
+.color-gradient-4{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #1c80fd;
+}
+
+.color-gradient-5{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #2b80fb;
+}
+
+.color-gradient-6{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #3a82f9;
+}
+
+.color-gradient-7{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #4a83f7;
+}
+
+.color-gradient-8{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #5a84f5;
+}
+
+.color-gradient-9{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #6d86f2;
+}
+
+.color-gradient-10{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #7b87f1;
+}
+
+.color-gradient-11{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #8988ef;
+}
+
+.color-gradient-12{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #9a89ec;
+}
+
+.color-gradient-13{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #a98aeb;
+}
+
+.color-gradient-14{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #bb8ce8;
+}
+
+.color-gradient-15{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #cd8de6;
+}
+
+.color-gradient-16{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #d98ee4;
+}
+
+.color-gradient-17{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #ea8fe2;
+}
+
+.color-gradient-18{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #ea8fe2;
+}
+
+.color-gradient-19{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #fc90e0;
+}
+
+.color-gradient-20{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #fe89bd;
+}
+
+.color-gradient-21{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #fb7c85;
+}
+
+.color-gradient-22{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #f97258;
+}
+
+.color-gradient-23{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #f76a37;
+}
+
+.color-gradient-24{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #494848;
+}
+
+
+.color-gradient-25{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #494848;
+}
+
+
+.color-gradient-26{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #494848;
+}
+
+.color-gradient-27{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #494848;
+}
+
+
+.color-gradient-28{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #494848;
+}
+
+
+.color-gradient-29{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #494848;
+}
+
+
+.color-gradient-24{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #494848;
+}
+
+
+.color-gradient-25{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #494848;
+}
+
+
+.color-gradient-26{
+    margin-right: 3px;
+    width: var(--colors-width);
+    height: var(--colors-height);
+    border-radius: var(--colors-radius);
+    background-color: #494848;
+}
+
+.footer-last-text{
+    color: gray;
+    margin: 2% 0 5% 0;
+}
 
 .ui-box-3{
     background: linear-gradient(to bottom, #f9f8f9, #E4BBE2)
