--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,18 @@ body{
     background-color: rgb(239, 238, 238);
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.boxes-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    position: relative;
+}
+
+.box{
+    margin-top: 5%;
 }
 
 .ui-box-1{
@@ -20,7 +30,6 @@ body{
     border-radius: 30px;
     border: 1px solid transparent;
     background: linear-gradient(#fefefe, #fefefe) padding-box, linear-gradient(to top, #9C9C9C, #E2E2E2) border-box;
-    margin-top: 5%;
 }
 
 
@@ -179,7 +188,6 @@ body{
     position: relative;
     background-color: rgb(30, 30, 30);
     width: 380px;
-    margin-top: 5%;
     margin-left: 4%;
     border-radius: 30px;
     background-image: linear-gradient(to top, #171616, #3A3A3A);
@@ -563,25 +571,7 @@ body{
 }
 
 
-.color-gradient-24{
-    margin-right: 3px;
-    width: var(--colors-width);
-    height: var(--colors-height);
-    border-radius: var(--colors-radius);
-    background-color: #494848;
-}
-
-
-.color-gradient-25{
-    margin-right: 3px;
-    width: var(--colors-width);
-    height: var(--colors-height);
-    border-radius: var(--colors-radius);
-    background-color: #494848;
-}
-
-
-.color-gradient-26{
+.color-gradient-30{
     margin-right: 3px;
     width: var(--colors-width);
     height: var(--colors-height);
@@ -595,10 +585,50 @@ body{
 }
 
 .ui-box-3{
-    background: linear-gradient(to bottom, #f9f8f9, #E4BBE2)
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    background: linear-gradient(to bottom, #ffffff, #E4BBE2);
+    width: 380px;
+    border-radius: 30px;
+    position: absolute;
+    top: 47%;
+    left: 15%;
+    text-align: center;
+}
+
+.chain-image-container{
+    text-align: center;
+}
+
+.chain-image{
+    width: 50%;
+}
+
+.ui-box-3 h2{
+    text-align: center;
+}
+
+.ui-box-3 p{
+    color: #8D8993;
+    width: 80%;
+    margin-left: 10%;
+}
+
+.ui-box-3 button{
+    background-color: #0e0d0d;
+    color: white;
+    width: 80%;
+    height: 60px;
+    border-radius: 20px;
+    margin-bottom: 5%;
 }
 
 .ui-box-4{
+    position: relative;
+    top: 0;
+    left: 18%;
+    width: 380px;
+    border-radius: 30px;
     background-color: #f5f5f5;
+    margin-left: 4%;
 }
 
